# aoc2025

./: .clang-tidy  .gitignore  CMakeLists.txt  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day08.cc  day09.cc  day10.cc  matrix.hh  rational.hh  test_rational.cc
include/: aoc.hh
src/: main.cc
src/2015/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc
src/2024/: day01.cc  day02.cc  day04.cc  day05.cc
src/2025/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc
